assets/styles.css
/* for main page index.html */
.jumbotron {
    background: url("http://www.californiafootgolfclub.com/static/img/footgolf-1.jpg") center center / cover no-repeat;
    background-size: 100%;
}

.lead {
    color: white;
    -webkit-text-stroke: 1px black;
}

/* on index.html in jumbotron */
.h11 {
    color: white;
    -webkit-text-stroke: 1px black;
}

h1 {
    color: blue;
}

.background {
    background-image: url("https://enchantedcypress.com/wp-content/uploads/2014/10/soft-bw-background.jpg"); 
    background-size: 100%; 
}

.container {
    background: white;
    margin: 50px;
}

/* for all pictures on portfolio.html */
.picture {
    width: 350px;
    height: 350px;
}

.col-med-6 {
    padding 10%;
}

.float-left {
    width: 250px;
    height: 250px;
    margin: 20px;
}

